# IFJ---T-m-088-varianta-a-4-II

./: CMakeLists.txt  README.md  aha  chat  errors.c  errors.h  expression.c  expression.h  helpingFun.c  helpingFun.h  ijo.c  main.c  memory.c  memory.h  scanner.c  scanner.h  test2  test3  testovaci_subor.txt  testovaci_subor2.txt  vyrazy.c  vyrazy.h
